--- a/MyLib/MyLib.csproj
+++ b/MyLib/MyLib.csproj
@@ -5,6 +5,28 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>MyLib</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>Brian</Authors>
+    <Description>Your package description</Description>
+    <PackageIcon>icon.png</PackageIcon>
+    <IncludeContentInPack>true</IncludeContentInPack>
+    <ContentTargetFolders>content</ContentTargetFolders>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="icon.png">
+      <Pack>true</Pack>
+      <PackagePath/>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="TSCLIB.dll">
+      <Pack>true</Pack>
+      <PackagePath>lib\net8.0\</PackagePath>
+    </Content>
+  </ItemGroup>
 
 </Project>
