--- a/MyLib/MyLib.csproj
+++ b/MyLib/MyLib.csproj
@@ -6,26 +6,37 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+    <!-- NuGet Package Metadata -->
     <PackageId>MyLib</PackageId>
-    <PackageVersion>1.0.0</PackageVersion>
+    <Version>1.0.0</Version>
     <Authors>Brian</Authors>
-    <Description>Your package description</Description>
+    <Owners>OAD</Owners>
+    <Company>SGS Taiwan Ltd.</Company>
+    <Description>TSC printer library</Description>
     <PackageIcon>icon.png</PackageIcon>
     <IncludeContentInPack>true</IncludeContentInPack>
     <ContentTargetFolders>content</ContentTargetFolders>
+    <PackageTags>TSC, printer</PackageTags>
+    <PackageProjectUrl>http://twoadcode:3000/brian_li/TestTscPrinter</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageCopyright>Copytight © 2024 SGS Taiwan Ltd.</PackageCopyright>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Update="icon.png">
       <Pack>true</Pack>
-      <PackagePath/>
+      <PackagePath />
     </None>
+    <None Update="readme.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="TSCLIB.dll">
       <Pack>true</Pack>
       <PackagePath>lib\net8.0\</PackagePath>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
